# emo-classify

./: .gitignore  .gitignore_new  FER2013_QUICKSTART.md  FI_INTEGRATION_SUMMARY.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  app.py  examples.py  main.py  pyproject.toml  requirements.txt  verify_setup.py
docs/: FI_DATASET_GUIDE.md
scripts/: download_fer2013.py  inference.py  prepare_fer2013.py  prepare_fi_dataset.py  run_api.py  train.py
src/: __init__.py
src/api/: app.py
src/config/: __init__.py  emotion_config.py  model_config.py  training_config.py
src/data/: __init__.py  dataloader.py  dataset.py  fer2013_dataset.py  fi_dataset.py  transforms.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  backbone.py  emotion_classifier.py
src/training/: __init__.py  loss.py  metrics.py  trainer.py
src/utils/: __init__.py  file_utils.py  visualization.py
